2005-08-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pl.msg: Updated (thanks to Andrew Smyk)

	* src/web/ejabberd_web_admin.erl: Bugfix (thanks to Badlop)

2005-08-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/win32/inetrc: Added (thanks to Sergei Golovan)

	* src/Makefile.win32: Updated (thanks to Sergei Golovan)
	* src/win32/ejabberd.cfg: Likewise
	* src/win32/ejabberd.nsi: Likewise

	* doc/guide.tex: Updated

	* src/ejabberd.hrl: Updated version

2005-08-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

2005-08-01  Mickael Remond  <mremond@erlang-fr.org>

	* src/msgs/fr.msg: Updated

2005-07-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_config.erl: Added host_config option
	* doc/guide.tex: Updated

	* src/ejabberd_auth_ldap.erl: Bugfix

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/msgs/de.msg: Updated (thanks to Torsten Werner)

	* src/web/ejabberd_web_admin.erl: Fixed CSS style sheet to be
	standards compliant (thanks to Sander Devrieze)

2005-07-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added "Virtual Hosts" page

2005-07-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Added filter_packet hook

2005-07-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/jd2ejd.erl: Updated to work with ODBC

	* src/mod_roster_odbc.erl: Updated

2005-07-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline_odbc.erl: Bugfix

	* src/mod_last_odbc.erl: Bugfix

2005-07-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Updated to J-EAI version

2005-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/acl.erl: Slightly changed "access" option processing

	* src/mod_disco.erl: Fixed processing of host features and
	extra_domains option
