@@ -1,3 +1,8 @@
+2005-08-11  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/cyrsasl_digest.erl: Fixed challenge/response parsing (thanks
+	to Martin Pokorny)
+
 2005-08-07  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/msgs/pl.msg: Updated (thanks to Andrew Smyk)
